fix(security): Switch to Alpine base image to resolve CVEs

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,6 +1,5 @@
 # Use PHP 8.2 with Apache server as the base image
-FROM php:8.2-apache-bookworm
-
+FROM php:8.2-apache-alpine
 # Install mysqli extension
 RUN docker-php-ext-install mysqli
 
